--- a/collections/ansible_collections/jaredhocutt/homelab/roles/immich/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/immich/vars/main.yml
@@ -87,10 +87,14 @@ immich_redis_container_secrets_combined: >-
 immich_container_labels_traefik:
   - key: traefik.enable
     value: "true"
+  - key: traefik.docker.network
+    value: "{{ common_traefik_network }}"
   - key: traefik.http.routers.{{ immich_name }}.rule
     value: Host(`{{ immich_traefik_host }}`)
   - key: traefik.http.routers.{{ immich_name }}.entrypoints
     value: "{{ common_traefik_entrypoint }}"
+  - key: traefik.http.services.{{ immich_name }}.loadbalancer.server.port
+    value: "2283"
 immich_container_labels_base: "{{ immich_traefik_enable | ternary((immich_container_labels_traefik | items2dict), {}) }}"
 
 immich_machine_learning_container_labels_base: {}
