--- a/collections/ansible_collections/jaredhocutt/homelab/roles/portainer/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/portainer/vars/main.yml
@@ -36,10 +36,14 @@ portainer_container_secrets_combined: >-
 portainer_container_labels_traefik:
   - key: traefik.enable
     value: "true"
+  - key: traefik.docker.network
+    value: "{{ common_traefik_network }}"
   - key: traefik.http.routers.{{ portainer_name }}.rule
     value: Host(`{{ portainer_traefik_host }}`)
   - key: traefik.http.routers.{{ portainer_name }}.entrypoints
     value: "{{ common_traefik_entrypoint }}"
+  - key: traefik.http.services.{{ portainer_name }}.loadbalancer.server.port
+    value: "9443"
 portainer_container_labels_base: "{{ portainer_traefik_enable | ternary((portainer_container_labels_traefik | items2dict), {}) }}"
 
 portainer_container_labels_combined: >-
