--- a/collections/ansible_collections/jaredhocutt/homelab/roles/sabnzbd/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/sabnzbd/vars/main.yml
@@ -36,10 +36,14 @@ sabnzbd_container_secrets_combined: >-
 sabnzbd_container_labels_traefik:
   - key: traefik.enable
     value: "true"
+  - key: traefik.docker.network
+    value: "{{ common_traefik_network }}"
   - key: traefik.http.routers.{{ sabnzbd_name }}.rule
     value: Host(`{{ sabnzbd_traefik_host }}`)
   - key: traefik.http.routers.{{ sabnzbd_name }}.entrypoints
     value: "{{ common_traefik_entrypoint }}"
+  - key: traefik.http.services.{{ sabnzbd_name }}.loadbalancer.server.port
+    value: "8080"
 sabnzbd_container_labels_base: "{{ sabnzbd_traefik_enable | ternary((sabnzbd_container_labels_traefik | items2dict), {}) }}"
 
 sabnzbd_container_labels_combined: >-
