--- a/collections/ansible_collections/jaredhocutt/homelab/roles/uptime_kuma/tasks/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/uptime_kuma/tasks/main.yml
@@ -15,6 +15,8 @@
     name: "{{ uptime_kuma_name }}"
     driver: bridge
     disable_dns: false
+    opt:
+      isolate: "true"
     quadlet_file_mode: "0600"
     state: quadlet
   become: true
@@ -42,7 +44,9 @@
   containers.podman.podman_container:
     name: "{{ uptime_kuma_name }}"
     image: "{{ uptime_kuma_image }}:{{ uptime_kuma_image_tag }}"
-    network: "{{ uptime_kuma_name }}.network"
+    network:
+      - "{{ uptime_kuma_name }}.network"
+      - "{{ uptime_kuma_traefik_enable | ternary(common_traefik_network ~ '.network', omit) }}"
     env: "{{ uptime_kuma_container_env_combined }}"
     secrets: "{{ uptime_kuma_container_secrets_combined }}"
     volumes:
