--- a/collections/ansible_collections/jaredhocutt/homelab/roles/uptime_kuma/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/uptime_kuma/vars/main.yml
@@ -36,10 +36,14 @@ uptime_kuma_container_secrets_combined: >-
 uptime_kuma_container_labels_traefik:
   - key: traefik.enable
     value: "true"
+  - key: traefik.docker.network
+    value: "{{ common_traefik_network }}"
   - key: traefik.http.routers.{{ uptime_kuma_name }}.rule
     value: Host(`{{ uptime_kuma_traefik_host }}`)
   - key: traefik.http.routers.{{ uptime_kuma_name }}.entrypoints
     value: "{{ common_traefik_entrypoint }}"
+  - key: traefik.http.services.{{ uptime_kuma_name }}.loadbalancer.server.port
+    value: "3001"
 uptime_kuma_container_labels_base: "{{ uptime_kuma_traefik_enable | ternary((uptime_kuma_container_labels_traefik | items2dict), {}) }}"
 
 uptime_kuma_container_labels_combined: >-
