--- a/collections/ansible_collections/jaredhocutt/homelab/roles/warracker/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/warracker/vars/main.yml
@@ -66,10 +66,14 @@ warracker_postgres_container_secrets_combined: >-
 warracker_container_labels_traefik:
   - key: traefik.enable
     value: "true"
+  - key: traefik.docker.network
+    value: "{{ common_traefik_network }}"
   - key: traefik.http.routers.{{ warracker_name }}.rule
     value: Host(`{{ warracker_traefik_host }}`)
   - key: traefik.http.routers.{{ warracker_name }}.entrypoints
     value: "{{ common_traefik_entrypoint }}"
+  - key: traefik.http.services.{{ warracker_name }}.loadbalancer.server.port
+    value: "80"
 warracker_container_labels_base: "{{ warracker_traefik_enable | ternary((warracker_container_labels_traefik | items2dict), {}) }}"
 
 warracker_postgres_container_labels_base: {}
