--- a/collections/ansible_collections/jaredhocutt/homelab/roles/wizarr/tasks/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/wizarr/tasks/main.yml
@@ -15,6 +15,8 @@
     name: "{{ wizarr_name }}"
     driver: bridge
     disable_dns: false
+    opt:
+      isolate: "true"
     quadlet_file_mode: "0600"
     state: quadlet
   become: true
@@ -42,7 +44,9 @@
   containers.podman.podman_container:
     name: "{{ wizarr_name }}"
     image: "{{ wizarr_image }}:{{ wizarr_image_tag }}"
-    network: "{{ wizarr_name }}.network"
+    network:
+      - "{{ wizarr_name }}.network"
+      - "{{ wizarr_traefik_enable | ternary(common_traefik_network ~ '.network', omit) }}"
     env: "{{ wizarr_container_env_combined }}"
     secrets: "{{ wizarr_container_secrets_combined }}"
     volumes:
