--- a/collections/ansible_collections/jaredhocutt/homelab/roles/calibre/tasks/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/calibre/tasks/main.yml
@@ -15,6 +15,8 @@
     name: "{{ calibre_name }}"
     driver: bridge
     disable_dns: false
+    opt:
+      isolate: "true"
     quadlet_file_mode: "0600"
     state: quadlet
   become: true
@@ -44,7 +46,9 @@
   containers.podman.podman_container:
     name: "{{ calibre_name }}"
     image: "{{ calibre_image }}:{{ calibre_image_tag }}"
-    network: "{{ calibre_name }}.network"
+    network:
+      - "{{ calibre_name }}.network"
+      - "{{ calibre_traefik_enable | ternary(common_traefik_network ~ '.network', omit) }}"
     env: "{{ calibre_container_env_combined }}"
     secrets: "{{ calibre_container_secrets_combined }}"
     volumes:
