--- a/collections/ansible_collections/jaredhocutt/homelab/roles/kometa/tasks/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/kometa/tasks/main.yml
@@ -15,6 +15,8 @@
     name: "{{ kometa_name }}"
     driver: bridge
     disable_dns: false
+    opt:
+      isolate: "true"
     quadlet_file_mode: "0600"
     state: quadlet
   become: true
