--- a/collections/ansible_collections/jaredhocutt/homelab/roles/overseerr/tasks/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/overseerr/tasks/main.yml
@@ -15,6 +15,8 @@
     name: "{{ overseerr_name }}"
     driver: bridge
     disable_dns: false
+    opt:
+      isolate: "true"
     quadlet_file_mode: "0600"
     state: quadlet
   become: true
@@ -42,7 +44,9 @@
   containers.podman.podman_container:
     name: "{{ overseerr_name }}"
     image: "{{ overseerr_image }}:{{ overseerr_image_tag }}"
-    network: "{{ overseerr_name }}.network"
+    network:
+      - "{{ overseerr_name }}.network"
+      - "{{ overseerr_traefik_enable | ternary(common_traefik_network ~ '.network', omit) }}"
     env: "{{ overseerr_container_env_combined }}"
     secrets: "{{ overseerr_container_secrets_combined }}"
     volumes:
