--- a/collections/ansible_collections/jaredhocutt/homelab/roles/portainer/tasks/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/portainer/tasks/main.yml
@@ -15,6 +15,8 @@
     name: "{{ portainer_name }}"
     driver: bridge
     disable_dns: false
+    opt:
+      isolate: "true"
     quadlet_file_mode: "0600"
     state: quadlet
   become: true
@@ -42,7 +44,9 @@
   containers.podman.podman_container:
     name: "{{ portainer_name }}"
     image: "{{ portainer_image }}:{{ portainer_image_tag }}"
-    network: "{{ portainer_name }}.network"
+    network:
+      - "{{ portainer_name }}.network"
+      - "{{ portainer_traefik_enable | ternary(common_traefik_network ~ '.network', omit) }}"
     env: "{{ portainer_container_env_combined }}"
     secrets: "{{ portainer_container_secrets_combined }}"
     volumes:
