--- a/collections/ansible_collections/jaredhocutt/homelab/roles/prowlarr/tasks/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/prowlarr/tasks/main.yml
@@ -15,6 +15,8 @@
     name: "{{ prowlarr_name }}"
     driver: bridge
     disable_dns: false
+    opt:
+      isolate: "true"
     quadlet_file_mode: "0600"
     state: quadlet
   become: true
@@ -42,7 +44,9 @@
   containers.podman.podman_container:
     name: "{{ prowlarr_name }}"
     image: "{{ prowlarr_image }}:{{ prowlarr_image_tag }}"
-    network: "{{ prowlarr_name }}.network"
+    network:
+      - "{{ prowlarr_name }}.network"
+      - "{{ prowlarr_traefik_enable | ternary(common_traefik_network ~ '.network', omit) }}"
     env: "{{ prowlarr_container_env_combined }}"
     secrets: "{{ prowlarr_container_secrets_combined }}"
     volumes:
