--- a/collections/ansible_collections/jaredhocutt/homelab/roles/radarr/tasks/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/radarr/tasks/main.yml
@@ -15,6 +15,8 @@
     name: "{{ radarr_name }}"
     driver: bridge
     disable_dns: false
+    opt:
+      isolate: "true"
     quadlet_file_mode: "0600"
     state: quadlet
   become: true
@@ -46,7 +48,9 @@
   containers.podman.podman_container:
     name: "{{ radarr_name }}"
     image: "{{ radarr_image }}:{{ radarr_image_tag }}"
-    network: "{{ radarr_name }}.network"
+    network:
+      - "{{ radarr_name }}.network"
+      - "{{ radarr_traefik_enable | ternary(common_traefik_network ~ '.network', omit) }}"
     env: "{{ radarr_container_env_combined }}"
     secrets: "{{ radarr_container_secrets_combined }}"
     volumes:
