--- a/collections/ansible_collections/jaredhocutt/homelab/roles/sonarr/tasks/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/sonarr/tasks/main.yml
@@ -15,6 +15,8 @@
     name: "{{ sonarr_name }}"
     driver: bridge
     disable_dns: false
+    opt:
+      isolate: "true"
     quadlet_file_mode: "0600"
     state: quadlet
   become: true
@@ -46,7 +48,9 @@
   containers.podman.podman_container:
     name: "{{ sonarr_name }}"
     image: "{{ sonarr_image }}:{{ sonarr_image_tag }}"
-    network: "{{ sonarr_name }}.network"
+    network:
+      - "{{ sonarr_name }}.network"
+      - "{{ sonarr_traefik_enable | ternary(common_traefik_network ~ '.network', omit) }}"
     env: "{{ sonarr_container_env_combined }}"
     secrets: "{{ sonarr_container_secrets_combined }}"
     volumes:
