--- a/collections/ansible_collections/jaredhocutt/homelab/roles/sonarr/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/sonarr/vars/main.yml
@@ -36,10 +36,14 @@ sonarr_container_secrets_combined: >-
 sonarr_container_labels_traefik:
   - key: traefik.enable
     value: "true"
+  - key: traefik.docker.network
+    value: "{{ common_traefik_network }}"
   - key: traefik.http.routers.{{ sonarr_name }}.rule
     value: Host(`{{ sonarr_traefik_host }}`)
   - key: traefik.http.routers.{{ sonarr_name }}.entrypoints
     value: "{{ common_traefik_entrypoint }}"
+  - key: traefik.http.services.{{ sonarr_name }}.loadbalancer.server.port
+    value: "8989"
 sonarr_container_labels_base: "{{ sonarr_traefik_enable | ternary((sonarr_container_labels_traefik | items2dict), {}) }}"
 
 sonarr_container_labels_combined: >-
