--- a/collections/ansible_collections/jaredhocutt/homelab/roles/stirling_pdf/tasks/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/stirling_pdf/tasks/main.yml
@@ -15,6 +15,8 @@
     name: "{{ stirling_pdf_name }}"
     driver: bridge
     disable_dns: false
+    opt:
+      isolate: "true"
     quadlet_file_mode: "0600"
     state: quadlet
   become: true
@@ -50,7 +52,9 @@
   containers.podman.podman_container:
     name: "{{ stirling_pdf_name }}"
     image: "{{ stirling_pdf_image }}:{{ stirling_pdf_image_tag }}"
-    network: "{{ stirling_pdf_name }}.network"
+    network:
+      - "{{ stirling_pdf_name }}.network"
+      - "{{ stirling_pdf_traefik_enable | ternary(common_traefik_network ~ '.network', omit) }}"
     env: "{{ stirling_pdf_container_env_combined }}"
     secrets: "{{ stirling_pdf_container_secrets_combined }}"
     volumes:
