--- a/collections/ansible_collections/jaredhocutt/homelab/roles/stirling_pdf/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/stirling_pdf/vars/main.yml
@@ -36,10 +36,14 @@ stirling_pdf_container_secrets_combined: >-
 stirling_pdf_container_labels_traefik:
   - key: traefik.enable
     value: "true"
+  - key: traefik.docker.network
+    value: "{{ common_traefik_network }}"
   - key: traefik.http.routers.{{ stirling_pdf_name }}.rule
     value: Host(`{{ stirling_pdf_traefik_host }}`)
   - key: traefik.http.routers.{{ stirling_pdf_name }}.entrypoints
     value: "{{ common_traefik_entrypoint }}"
+  - key: traefik.http.services.{{ stirling_pdf_name }}.loadbalancer.server.port
+    value: "8080"
 stirling_pdf_container_labels_base: "{{ stirling_pdf_traefik_enable | ternary((stirling_pdf_container_labels_traefik | items2dict), {}) }}"
 
 stirling_pdf_container_labels_combined: >-
