--- a/collections/ansible_collections/jaredhocutt/homelab/roles/tautulli/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/tautulli/vars/main.yml
@@ -36,10 +36,14 @@ tautulli_container_secrets_combined: >-
 tautulli_container_labels_traefik:
   - key: traefik.enable
     value: "true"
+  - key: traefik.docker.network
+    value: "{{ common_traefik_network }}"
   - key: traefik.http.routers.{{ tautulli_name }}.rule
     value: Host(`{{ tautulli_traefik_host }}`)
   - key: traefik.http.routers.{{ tautulli_name }}.entrypoints
     value: "{{ common_traefik_entrypoint }}"
+  - key: traefik.http.services.{{ tautulli_name }}.loadbalancer.server.port
+    value: "8181"
 tautulli_container_labels_base: "{{ tautulli_traefik_enable | ternary((tautulli_container_labels_traefik | items2dict), {}) }}"
 
 tautulli_container_labels_combined: >-
