--- a/collections/ansible_collections/jaredhocutt/homelab/roles/warracker/tasks/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/warracker/tasks/main.yml
@@ -17,6 +17,8 @@
     name: "{{ warracker_name }}"
     driver: bridge
     disable_dns: false
+    opt:
+      isolate: "true"
     quadlet_file_mode: "0600"
     state: quadlet
   become: true
@@ -67,7 +69,9 @@
   containers.podman.podman_container:
     name: "{{ warracker_name }}"
     image: "{{ warracker_image }}:{{ warracker_image_tag }}"
-    network: "{{ warracker_name }}.network"
+    network:
+      - "{{ warracker_name }}.network"
+      - "{{ warracker_traefik_enable | ternary(common_traefik_network ~ '.network', omit) }}"
     env: "{{ warracker_container_env_combined }}"
     secrets: "{{ warracker_container_secrets_combined }}"
     volumes:
